docs: example
