# internal/libs/base/response.go
@@ -4,6 +4,10 @@ type BaseResponse struct {
 	Data any `json:"data"`
 }
 
+type ErrorResponse struct {
+	Data string `json:"data" example:"error message"`
+}
+
 func NewResponse(data any) *BaseResponse {
 	return &BaseResponse{Data: data}
 }
